# translation_project

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  New materials for lithium&#x2013;sulfur batteries: challenges and future directions.tex  README.md  README_Templates.md  cli.py  english_book_template.tex  errors_learned_from.txt  example_usage.sh  install_soltani_fonts.md  latex_formatter.py  latex_formatter_advanced.py  ohmyzsh_guide_final.aux  ohmyzsh_guide_final.out  ohmyzsh_guide_final.tex  ohmyzsh_guide_final.toc  persian_book_template.aux  persian_book_template.out  persian_book_template.tex  persian_book_template.toc  persian_font_test.aux  persian_font_test.tex  prompt_latex_formatter.md  prompt_translator.md  pyproject.toml  setup-pre-commit.bat  setup-pre-commit.sh  setup.py  soltani_fonts_test.tex  test_add_amsmath.tex  test_add_bibliography.aux  test_add_bibliography.tex  test_add_booktabs.aux  test_add_booktabs.tex  test_add_caption.tex  test_add_enumitem.tex  (+66 more)
config/: README.md
config/formulas/: __init__.py  math_patterns.json  pattern_loader.py  scientific_patterns.json
new_book/: tmp_rovodev_improved_lithium_sulfur.aux  tmp_rovodev_improved_lithium_sulfur.tex
pdf_to_image/: .gitignore  CHANGELOG.md  FIXES_APPLIED.md  LICENSE  MANIFEST.in  Makefile  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_NOTES.md  create_sample_pdf.py  fix_and_test.py  pdf_converter.py  publish.sh  pyproject.toml  requirements.txt  setup.py  test_converter.py
pdf_to_image/docs/: DEPLOYMENT.md  GITHUB_SETUP.md  HOW_IT_WORKS.md  LIVE_TEST_RESULTS.md  README.md  TEST_RESULTS.md  library_comparison.md  project_status.md  quality_baseline.md
python-oop-practices/practices/OOP_exercises/: q03_basic_class_definition_car.py  q04_basic_class_methods_car_display.py  q15_intermediate_inheritance_vehicle.py  q56_expert_chain_of_responsibility_pattern.py
python-oop-practices/practices/SOLID_exercises/Dependency Inversion Principle (DIP)/: q2_advanced_level_dip.py
python-practices/: README.md
tests/: conftest.py  test_advanced_coverage.py  test_bibliography_formatting.py  test_cli.py  test_configuration.py  test_crossref_formatting.py  test_crossref_integration.py  test_edge_cases.py  test_error_detection_tdd.py  test_error_handling.py  test_final_coverage.py  test_integration.py  test_latex_formatter.py  test_latex_formatter_advanced.py  test_latex_formatter_basic.py  test_latex_formatter_unit.py  test_main_cli.py  test_math_formatting.py  test_package_sorting.py  test_performance.py  test_syntax_validation.py  test_table_formatting.py  test_tdd_cycle2_summary.py  test_tdd_integration.py
tests/fixtures/: __init__.py  sample_latex_files.py
